	* bibtex-2.c, gblproc.h:
	Fix bug of making upper/lower cases.
	It may remain a bug when lengths are different between
	from-string and to-string, for example:
	  U+00DF ß LATIN SMALL LETTER SHARP S, 0xC3 0x9F in UTF-8
	  U+1E9E ẞ LATIN CAPITAL LETTER SHARP S, 0xE1 0xBA 0x9E in UTF-8
	* tests/ubasic.{bib,bbl},yannis.{bib,bbl}:
	Update.
	* tests/bibtexu-yannis.test:
	Reenable again (hopefully fixed the issue).

2021-08-14  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* bibtex.c, bibtex-[23].c, gbl{proc,vars}.h:
	Use ucol_strcollUTF8() for collation.
	Use u_strToUTF8WithSub() in icu_fromUChars() and
	u_strFromUTF8WithSub() in icu_toUChars() in stead of ucnv_*.
	Initialize ICU collator only once.

2021-06-21  Karl Berry  <karl@freefriends.org>

	* tests/bibtexu-yannis.test: disable again. Fails on
	FreeBSD, OpenBSD, sparc-solaris.
	https://tug.org/pipermail/tlbuild/2021q2/004918.html

2021-06-20  Karl Berry  <karl@freefriends.org>

	* Makefile.am (bibtexu_tests): add tests/bibtexu-{basic,range}.test.
	(EXTRA_DIST, DISTCLEANFILES): likewise.
	* tests/bibtexu-{basic,range}.test,
	* tests/u{basic,range}.{aux,bbl,bib,tex}: new files from Dmitry.

	* tests/bibtexu-yannis.test: reenable (probably failed due to lack
	of pthread?), use same test template.
	* tests/yannis.bib: credit Yannis.

2021-06-20  Dmitry Zheleznyakov <dmitry.zhelezniakov@gmail.com>

	* bibtex-4.c (x_substring, web section 438): adjust pop_lit1
	before icu_fromUChars calls, to avoid crash on page ranges.

2021-06-19  Karl Berry  <karl@freefriends.org>

	* configure.ac [enable_bibtexu]: also check for -lpthread.
	* Makefile.am (bibtexu_LDADD): include $(PTHREAD_LIB).
	Report and fix from Dmitry Zheleznyakov:
	https://tug.org/pipermail/tex-k/2021-June/003591.html

2021-02-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* utils.c, configure.ac:
	Show TeX Live version by version option.
	Show bug report address in usage.

2019-05-22  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
